force-app/main/default/objects/HRCFSL_Required_Tool__c/HRCFSL_Required_Tool__c.object-meta.xml
<CustomObject>
    <description>Stores the calibrated tools that are required (or optional) for completing a Work Order.</description>
    <label>Required Tool</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Required Tool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Tools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>