force-app/main/default/objects/HRCFSL_Required_Tool__c/fields/HRCFSL_Required__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>