force-app/main/default/objects/HRCFSL_Required_Tool__c/fields/HRCFSL_Used__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field that indicates whether this particular required tool has been used on the Work Order. Is changed from false to true when a Calibrated Tool of this product model is added to the Work Order.</description>
    <label>Used?</label>
    <type>Checkbox</type>
</CustomField>