force-app/main/default/objects/HRCFSL_Required_Tool__c/fields/HRCFSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Required Tools</relationshipLabel>
    <relationshipName>Required_Tools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>