force-app/main/default/objects/HRCFSL_Required_Tool__c/fields/HRCSVC_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Serial_Number__c</fullName>
    <label>Serial_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>