force-app/main/default/objects/HRCFSL_Required_Tool__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>EU</fullName>
                <label>Europe</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>